--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,4 +1,25 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+{% block body_block %}
+    <h1>Rango says...</h1>
+    <div>
+        here is the about page. <br />
+        <strong> This tutorial has been put together by Ostap </strong><br /> 
+    </div>
+
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <br>
+        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" /> 
+    </div> 
+{% endblock %}
+
+
+{% comment %} <!DOCTYPE html>
 
 {% load staticfiles %}
 
@@ -13,10 +34,11 @@
             here is the about page. <br />
             <strong> This tutorial has been put together by Ostap </strong><br /> 
         </div>
+
         <div>
             <a href="/rango/">Index</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <br>
             <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" /> 
         </div> 
     </body>
-</html>
+</html> {% endcomment %}
